2007-08-21 [holger]	0.11cvs8

	* COPYING
	* src/notification_banner.c
	* src/notification_banner.h
	* src/notification_command.c
	* src/notification_command.h
	* src/notification_core.c
	* src/notification_core.h
	* src/notification_foldercheck.c
	* src/notification_foldercheck.h
	* src/notification_lcdproc.h
	* src/notification_pixbuf.c
	* src/notification_pixbuf.h
	* src/notification_plugin.c
	* src/notification_plugin.h
	* src/notification_popup.c
	* src/notification_popup.h
	* src/notification_prefs.c
	* src/notification_prefs.h
		Change license to GPLv3 or later.

2007-08-21 [holger]	0.11cvs7

	* src/notification_lcdproc.c
		Don't even try to connect to LCDd
		if the module is deactivated.

2007-08-21 [holger]	0.11cvs6

	* src/notification_core.c
	* src/notification_core.h
	* src/notification_lcdproc.c
	* src/notification_lcdproc.h
	* src/notification_plugin.c
		Better structure for notifications
		of message counts.

2007-08-21 [holger]	0.11cvs5

	* ChangeLog
	* README
	* configure.ac
	* src/Makefile.am
	* src/notification_lcdproc.c
	* src/notification_lcdproc.h
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
		Add a new module: lcdproc
		to display the status of new and unread messages
		on an external LCD. Needs a LCDd server up and running.
		This is a rewrite of the former LCDProc plugin
		for Sylpheed-Claws (GTK1 branch) which is copyrighted by
		Leandro Pereira.
		The module is not built by default until I can find my
		soldering iron and actually test with my old LCD (instead
		of just using the LCDd curses driver).

2007-08-20 [holger]	0.11cvs4

	* src/notification_core.c
	* src/notification_core.h
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
		Add an option to restrict the maximum number of
		messages in the banner module. Having too many messages there
		causes too high system load. Defaults to 100. This restriction
		can be deactivated by setting the option to 0.